final publish file

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,8 @@
-name: publish to NPM
+name: Publish to NPM
 
-on: [push]
-
-#
-#on:
-#
-#  release:
-#    types: [published]
+on:
+  release:
+    types: [published]
 
 jobs:
   publish:
@@ -20,7 +16,7 @@ jobs:
         with:
           node-version: 12
       - run: npm install
-      - run: npm test
-    #  - uses: JS-DevTools/npm-publish@v1
-    #    with:
-    #      token: ${{ secrets.NPM_TOKEN }}
+    #  - run: npm test
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
