--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,12 +11,14 @@ jobs:
       run:
         working-directory: ./lib
     steps:
+      - name: Checkout
       - uses: actions/checkout@v3
+      - name: Setup Node
       - uses: actions/setup-node@v3
         with:
           node-version: 12
       - name: Install dependencies and build
-      - run: npm install
+        run: npm install
     #  - run: npm test
       - name: Publish package on NPM
         run: npm publish
