--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 12
-      - run: npm init --scope=relewise
+          scope: '@relewise'
+      - run: npm init
       - run: npm install
     #  - run: npm test
       - run: npm publish --access public
