--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
           scope: '@relewise'
+      - run: node gpr-hack.js
       - run: npm install
     #  - run: npm test
       - run: npm publish --access public
