--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,9 +17,9 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
           scope: '@relewise'
-      - run: node gpr-hack.js
+      - run: npm config set
       - run: npm install
     #  - run: npm test
-      - run: npm publish --access public
+      - run: npm publish --access public --ignore-scripts
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
