--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
           scope: '@relewise'
-      - run: npm config set
+      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
       - run: npm install
     #  - run: npm test
       - run: npm publish --access public --ignore-scripts
