--- a/lib/package.json
+++ b/lib/package.json
@@ -4,11 +4,17 @@
   "description": "Relewise data enhancers for Uniform Canvas",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Relewise/relewise-integrations-uniform-enhancer",
+    "url": "git+https://github.com/Relewise/relewise-integrations-uniform-enhancer.git",
     "directory": "lib"
   },
   "keywords": [
-    "relewise", "search-engine", "recommendations", "personalization", "search", "recommender", "uniform"
+    "relewise",
+    "search-engine",
+    "recommendations",
+    "personalization",
+    "search",
+    "recommender",
+    "uniform"
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,5 +38,9 @@
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Relewise/relewise-integrations-uniform-enhancer/issues"
+  },
+  "homepage": "https://github.com/Relewise/relewise-integrations-uniform-enhancer#readme"
 }
