--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
+      - run: npm cache clean --force
       - run: npm set //registry.npmjs.org/:_authToken $NODE_AUTH_TOKEN
       - run: npm ci
       - run: npm run build
