--- a/lib/package.json
+++ b/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@relewise/uniform-canvas",
+  "name": "mza-uniform-canvas",
   "version": "1.0.0-alpha.2",
   "description": "Relewise data enhancers for Uniform Canvas",
   "repository": {
