--- a/lib/package.json
+++ b/lib/package.json
@@ -39,6 +39,9 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "bugs": {
     "url": "https://github.com/Relewise/relewise-integrations-uniform-enhancer/issues"
   },
