--- a/lib/package.json
+++ b/lib/package.json
@@ -40,7 +40,7 @@
     "typescript": "^4.6.4"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/@relewise"
   },
   "bugs": {
     "url": "https://github.com/Relewise/relewise-integrations-uniform-enhancer/issues"
