--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,10 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
           always-auth: true
-      - run: npm i
+      - run: npm cache clean --force
+      - run: npm set //registry.npmjs.org/:_authToken $NODE_AUTH_TOKEN
+      - run: npm ci
+      - run: npm login --registry=https://registry.npmjs.org --scope=@relewise
       - run: npm run build
       - run: npm publish --access public --ignore-scripts
         env:
