--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm set //registry.npmjs.org/:_authToken $NODE_AUTH_TOKEN
       - run: npm ci
       - run: npm run build
-      - run: npm publish --access public --ignore-scripts
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           token: ${{ secrets.NPM_TOKEN }}
