--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: https://registry.npmjs.org/
+          scope: '@relewise'
       - run: npm i
       - run: npm run build
       - run: npm publish --access public
