--- a/samples/nuxtjs/package.json
+++ b/samples/nuxtjs/package.json
@@ -26,6 +26,8 @@
     "nuxt": "3.0.0-rc.6"
   },
   "dependencies": {
+    "@relewise/client": "^1.0.2",
+    "@relewise/uniform-canvas": "^1.0.0-alpha.2",
     "@uniformdev/canvas": "^17.0.0",
     "@uniformdev/canvas-vue": "^17.0.0",
     "@uniformdev/context": "^17.0.0",
