feat: bump relewise deps in sample project

--- a/samples/nuxtjs/package.json
+++ b/samples/nuxtjs/package.json
@@ -26,8 +26,8 @@
     "nuxt": "3.0.0-rc.6"
   },
   "dependencies": {
-    "@relewise/client": "^1.0.2",
-    "@relewise/uniform-canvas": "^1.0.0-alpha.2",
+    "@relewise/client": "^1.11.0",
+    "@relewise/uniform-canvas": "^1.1.0",
     "@uniformdev/canvas": "^17.0.0",
     "@uniformdev/canvas-vue": "^17.0.0",
     "@uniformdev/context": "^17.0.0",
